--- a/index.html
+++ b/index.html
@@ -27,8 +27,17 @@
                 <i class="fas fa-ellipsis-v"></i>
               </div>
             </div>
-            <div class="notifications"></div>
-            <div class="search"></div>
+            <div class="notifications">
+              <i class="fas fa-bell-slash"></i>
+              <div>
+                <h4>Ricevi notifiche di nuovi messaggi</h4>
+                <a href="#">Attiva notifiche desktop</a>
+              </div>
+            </div>
+            <div class="search">
+              <i class="fas fa-search"></i>
+              <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+            </div>
             <div class="contacts">
 
               <ul>
@@ -52,10 +61,6 @@
 
     </div>
 
-
-
-
-    <!-- <i class="fas fa-search"></i> -->
     <!-- <i class="fas fa-paperclip"></i> -->
     <!-- <i class="far fa-smile"></i> -->
     <!-- <i class="fas fa-microphone"></i> -->
