--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="user">
               <div class="user-info">
                 <img src="img/avatar.png" alt="avatar">
-                <h4>Nome utente</h4>
+                <h4>Nome Utente</h4>
               </div>
               <div class="user-icons">
                 <i class="fas fa-circle-notch"></i>
@@ -52,7 +52,14 @@
 
           <div class="right">
             <div class="current-contact"></div>
-            <div class="messages"></div>
+            <div class="messages">
+              <div class="message-send">
+                <span>Messaggio inviato</span>
+              </div>
+              <div class="message-received">
+                <span>Messaggio ricevuto</span>
+              </div>
+            </div>
             <div class="write-message">
               <i class="far fa-smile"></i>
               <input type="text" name="" value="" placeholder="Scrivi un messaggio">
