--- a/index.html
+++ b/index.html
@@ -51,7 +51,17 @@
           </div>
 
           <div class="right">
-            <div class="current-contact"></div>
+            <div class="current-contact">
+              <div class="current-contact-info">
+                <img src="img/avatar.png" alt="avatar">
+                <h4>Nome Utente</h4>
+              </div>
+              <div class="current-contact-icons">
+                <i class="fas fa-search"></i>
+                <i class="fas fa-paperclip"></i>
+                <i class="fas fa-ellipsis-v"></i>
+              </div>
+            </div>
             <div class="messages">
               <div class="message-send">
                 <span>Messaggio inviato</span>
@@ -72,9 +82,6 @@
       </div>
 
     </div>
-
-    <!-- <i class="fas fa-paperclip"></i> -->
-
 
     <script src="js/script.js" charset="utf-8"></script>
   </body>
