--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <img src="img/avatar.png" alt="avatar">
                 <h4>Nome Utente</h4>
               </div>
-              <div class="user-icons">
+              <div class="icons">
                 <i class="fas fa-circle-notch"></i>
                 <i class="fas fa-comment-alt"></i>
                 <i class="fas fa-ellipsis-v"></i>
@@ -58,7 +58,7 @@
                 <img :src="contact.avatar" alt="avatar">
                 <h4>{{ contact.name }}</h4>
               </div>
-              <div class="current-contact-icons">
+              <div class="icons">
                 <i class="fas fa-search"></i>
                 <i class="fas fa-paperclip"></i>
                 <i class="fas fa-ellipsis-v"></i>
