--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
             </div>
             <div class="search">
               <i class="fas fa-search"></i>
-              <input type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+              <input v-model="userInput" @keyDown="searchContact" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
             </div>
             <div class="contacts">
 
               <ul>
-                <li
-                v-for="(contact, index) in contacts" @click="activeContact = index" :class="(activeContact == index) ? 'activeContact' : 'null'">
+                <li v-if="contact.visible"
+                    v-for="(contact, index) in contacts" @click="addActiveClass(index)" :class="(activeIndex == index) ? 'activeIndex' : ''">
                   <img :src="contact.avatar" alt="avatar">
                   <h4>{{ contact.name }}</h4>
                 </li>
@@ -55,7 +55,7 @@
 
           <div class="right">
             <div class="current-contact">
-              <div class="current-contact-info" v-for="(contact, index) in contacts" v-if="(activeContact == index)">
+              <div class="current-contact-info" v-for="(contact, index) in contacts" v-if="(activeIndex == index)">
                 <img :src="contact.avatar" alt="avatar">
                 <h4>{{ contact.name }}</h4>
               </div>
@@ -66,7 +66,7 @@
               </div>
             </div>
             <div class="messages-box">
-              <div class="message" v-for="message in contacts[activeContact].messages">
+              <div class="message" v-for="message in contacts[activeIndex].messages">
                 <div :class="(message.status == 'sent') ? 'sent' : 'received'">
                   <span>
                     {{ message.text }}
