--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="search">
             <i class="fas fa-search"></i>
-            <input v-model="userInput" @keyDown="searchContact" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
+            <input v-model="userInput" @keyup="searchContact" type="text" name="" value="" placeholder="Cerca o inizia una nuova chat">
           </div>
           <div class="contacts">
 
