--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- Day.js cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.9.7/dayjs.min.js" integrity="sha512-kZ+x2gdehn6OZMWZSp3Vt5R+v9hQTYEATQwaUfWquhxbvNVAy6IRtYs7asdyxKUTqG0I5ZqBqnzcBrpnHJCAGw==" crossorigin="anonymous"></script>
-    <!-- Vue.js -->
+    <!-- Vue.js cdn -->
     <script src="https://cdn.jsdelivr.net/npm/vue@2.6.12/dist/vue.js"></script>
     <title>Boolzapp</title>
   </head>
@@ -84,18 +84,16 @@
             </div>
           </div>
           <!-- /Current Contact -->
-          <!-- Message Box -->
+          <!-- Messages Box -->
           <div class="messages-box">
-            <div class="message" v-for="message in contacts[activeIndex].messages">
-              <div :class="message.status">
-                <p>
-                  {{ message.text }}
-                  <time>{{ message.date }}</time>
-                </p>
-              </div>
+            <div class="message" :class="message.status" v-for="message in contacts[activeIndex].messages">
+              <p>
+                {{ message.text }}
+                <time>{{ message.date }}</time>
+              </p>
             </div>
           </div>
-          <!-- /Message Box -->
+          <!-- /Messages Box -->
           <!-- Write Message -->
           <div class="write-message">
             <i class="far fa-smile"></i>
